--- a/HotPlaceList/templates/hotplist/details.html
+++ b/HotPlaceList/templates/hotplist/details.html
@@ -6,10 +6,21 @@
 <p>{{HP_data.address}}</p>
 <p>{{HP_data.phone_num}}</p>
 
-
+{% if user.is_authenticated%}
+{% if saved%}
 <a href="{% url 'hotplist:comment_create' HP_data.id %}">
     <button>댓글 작성하기</button>
 </a>
+{% else %}
+<a href = "{% url 'hotplist:save' HP_data.id %}">
+    <button> 찜하기 </button>
+<a href="{% url 'hotplist:comment_create' HP_data.id %}">
+    <button>댓글 작성하기</button>
+</a>
+{% endif %}
+{% endif %}
+
+
 {% for items in Review_data.all%}
 <li> 
     {{items.content}}
@@ -17,6 +28,17 @@
     {{items.rating}}
 
     {{items.pub_date}}
+
+    {{items.author}}
+
+    {% if request.user == items.author%}
+    <a href = "{% url 'hotplist:comment_edit' items.id %}">
+        <button> 수정</button>
+    </a>
+    <a href = "{% url 'hotplist:comment_delete' items.id %}">
+        <button> 삭제 </button>
+    </a>
+    {% endif %}
 </li>
 {% endfor %}
 {% endblock %}
