signup 페이지 생성, 게시물 출력 페이지 시작

--- a/HotPlaceList/templates/hotplist/index.html
+++ b/HotPlaceList/templates/hotplist/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>Techer H-Team 맛집게시판</h1>
-
+<a href="{% url 'hotplist:signin' %}">로그인</a>
+<a href="{% url 'hotplist:signup' %}">회원가입</a>
 {%endblock%}
