--- a/HotPlaceList/templates/base.html
+++ b/HotPlaceList/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>H-Team 맛집게시판</title>
+    <title>H-Team 맛집게시판 김진용</title>
 </head>
 <body>
     {%block content%}
