--- a/HotPlaceList/templates/hotplist/signup.html
+++ b/HotPlaceList/templates/hotplist/signup.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container my-3">
-    <form method="post" action="{% url 'hotplist:signup' %}">
+    <form method="POST" action="{% url 'hotplist:signup' %}">
         {% csrf_token %}
         
         <div class="mb-3">
