--- a/HotPlaceList/templates/hotplist/index.html
+++ b/HotPlaceList/templates/hotplist/index.html
@@ -2,4 +2,28 @@
 {% block content %}
 <h1>Techer H-Team 맛집게시판</h1>
 
+{% if user.is_authenticated %}
+<h3>Welcome, {{user.username}}</h3>
+<br>
+<a href = "{% url 'hotplist:logout' %}">
+    <button>로그아웃</button>
+</a>
+<a href = "{% url 'hotplist:create'%}">
+    <button>맛집 추가하기</button>
+</a>
+
+{% else %}
+<a href = "{% url 'hotplist:login' %}">
+    <button>로그인</button>
+</a>
+<a href = "{% url 'hotplist:signup' %}">
+    <button>회원가입</button>
+</a>
+{% endif %}
+
+{%for items in list%}
+<li>
+    <a href = "{% url 'hotplist:details' items.id%}"> {{items.name}} {{items.rating}}</a>
+</li>
+{% endfor %}
 {%endblock%}
