--- a/HotPlaceList/templates/hotplist/signup.html
+++ b/HotPlaceList/templates/hotplist/signup.html
@@ -2,14 +2,16 @@
 {% block content %}
 <form method = "POST" action = "{% url 'hotplist:signup' %}">
     {% csrf_token %}
-    아이디:
+    {{form.as_p}}
+    {{form.errors}}
+    <!-- 아이디:
     <br>
     <input name = "username" type = "text">
     <br>
     비밀번호:
     <br>
     <input name = "password1" type = "password">
-    <br>
-    <input type = "submit" value = "로그인">
+    <br> -->
+    <input type = "submit" value = "회원가입">
 </form>
 {% endblock %}
