--- a/HotPlaceList/templates/hotplist/profile.html
+++ b/HotPlaceList/templates/hotplist/profile.html
@@ -1,22 +1,28 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1> {{user.username}}'s profile page</h1>
+{% if request.user != user %}
+<p> hello </p>
+<br>
+{% endif %}
 <h3>찜목록</h3>
 {% for items in SP_data.all%}
 <li> 
     <a href = "{% url 'hotplist:details' items.saved.id %}">
         {{items.saved.name}}
     </a>
+
+    {% if request.user == user %}
     <a href = "{% url 'hotplist:save_delete' items.saved.id %}">
         <button> 삭제</button>
     </a>
-
-</li>
+    {% endif %}
 {% endfor %}
 
-<br>
-<h3>댓글 목록</h3>
-{% for items in Review_data.all%}
+    <br>
+    {% if request.user == user %}
+    <h3>댓글 목록</h3>
+    {% for items in Review_data.all%}
 <li>
     <a href = "{%url 'hotplist:details' items.place.id %}">
         {{items.place.name}}
@@ -26,4 +32,8 @@
     </a>
 </li>
 {% endfor %}
+    {% endif %}
+</li>
+
+
 {% endblock %}
