detail 페이지 생성, img 불러올때 404 error 발생..

--- a/HotPlaceList/templates/hotplist/index.html
+++ b/HotPlaceList/templates/hotplist/index.html
@@ -3,19 +3,22 @@
 <h1>Techer H-Team 맛집게시판</h1>
 {% if user.is_authenticated %}
 <div>
-    <p><a href="{% url 'hotplist:logout' %}"><button>로그아웃</button></a>
+    <p><a href="{% url 'hotplist:logout' %}"><button>로그아웃</button></a></p>
+    <p>내 프로필</p>
+    <p>맛집 추가하기</p>
 </div>
 {% else %}
 <div>
     <form method = "GET" action = "{% url 'hotplist:login' %}">
-        <input type ="submit" Value = '로그인'></form>
-        <a href="{% url 'hotplist:signup' %}">회원가입</a>
+        <input type ="submit" Value = '로그인'>
+    </form>
+    <a href="{% url 'hotplist:signup' %}">회원가입</a>
 </div>
 {% endif %}
 
 {% for items in list %}
 <ol>
-    <p>{{items.placename}} {{items.rating}}</p>
+    <a href = "{% url 'hotplist:detail' items.id%}">{{items.placename}} {{items.rating}}</a>
 </ol>
 {% endfor %}
 {%endblock%}
