--- a/HotPlaceList/templates/hotplist/detail.html
+++ b/HotPlaceList/templates/hotplist/detail.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>맛집 리스트</h1>
+<h1>{{HP_data.placename}}</h1>
+<img src="{{HP_data.image.url}}" width="400px">
+<p>Address : {{HP_data.address}}</p>
+<p>Phone : {{HP_data.phone}}</p>
+<p>Rating : {{HP_data.rating}}</p>
 
 
 {%endblock%}
