--- a/HotPlaceList/templates/hotplist/detail.html
+++ b/HotPlaceList/templates/hotplist/detail.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-<p>{{HP_data.name}}</p>
-<p>{{HP_data.rating}}</p>
-<p>{{HP_data.address}}</p>
-<p>{{HP_data.phone_num}}</p>
+<h1>{{HP_data.name}}</h1>
+<p>평점  : {{HP_data.rating}}</p>
+<p>주소  : {{HP_data.address}}</p>
+<p>전화번호 : {{HP_data.phone_num}}</p>
 
 {% if user.is_authenticated%}
 <a href="{% url 'hotplist:review_create' HP_data.id %}">
@@ -11,18 +11,18 @@
 </a>
 {% endif %}
 
-{% for items in Review_data.all%}
+{% for item in Review_data.all%}
 <li> 
-    {{items.comment}}
-    {{items.rating}}
-    {{items.pub_date}}
-    {{items.author}}
+    {{item.comment}}
+    {{item.rating}}
+    {{item.pub_date}}
+    {{item.author}}
 
-    {% if request.user == items.author%}
-    <a href = "{% url 'hotplist:review_modify' items.id %}">
+    {% if request.user == item.author%}
+    <a href = "{% url 'hotplist:review_modify' item.id %}">
         <button> 수정</button>
     </a>
-    <a href = "{% url 'hotplist:review_delete' items.id %}">
+    <a href = "{% url 'hotplist:review_delete' item.id %}">
         <button> 삭제 </button>
     </a>
     {% endif %}
