--- a/HotPlaceList/templates/hotplist/index.html
+++ b/HotPlaceList/templates/hotplist/index.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Techer H-Team 맛집게시판</h1>
+<h1>Techeer H-Team 맛집게시판</h1>
 
 {% if user.is_authenticated %}
-<h3>Welcome, {{user.username}}</h3>
-<br>
+<h3>안녕하세요, {{user.username}} 님</h3>
 <a href = "{% url 'hotplist:logout' %}">
     <button>로그아웃</button>
 <br>
@@ -12,7 +11,6 @@
 <a href = "{% url 'hotplist:create'%}">
     <button>맛집 추가하기</button>
 </a>
-
 {% else %}
 <a href = "{% url 'hotplist:login' %}">
     <button>로그인</button>
@@ -22,5 +20,10 @@
     <button>회원가입</button>
 </a>
 {% endif %}
+
+<h2>맛집 리스트</h2>
+{% for item in placeList %}
+<a href = "{% url 'hotplist:detail' item.id %}"> {{item.name}} (평점: {{item.rating}})</a><br>
+{% endfor %}
 
 {%endblock%}
