detail 페이지 리뷰 추가

--- a/HotPlaceList/templates/hotplist/detail.html
+++ b/HotPlaceList/templates/hotplist/detail.html
@@ -5,6 +5,13 @@
 <p>Address : {{HP_data.address}}</p>
 <p>Phone : {{HP_data.phone}}</p>
 <p>Rating : {{HP_data.rating}}</p>
-
-
+<p>
+<p>리뷰</p>
+{% for review in Review_data%}
+<li>
+    <p> Author : {{review.author}}</p>
+    <p> Content : {{review.content}}</p>
+    <p> Rating : {{review.rating}}</p>
+    <p> Date : {{review.date}}</p>
+</li>
 {%endblock%}
