--- a/HotPlaceList/templates/hotplist/detail.html
+++ b/HotPlaceList/templates/hotplist/detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+<h1><a href="{% url 'hotplist:index' %}">Home</a></h1>
 <h1>{{HP_data.placename}}</h1>
 <img src="{{HP_data.image.url}}" width="400px">
 <p>Address : {{HP_data.address}}</p>
@@ -8,13 +9,17 @@
 {% if user.is_authenticated%}
 <p><a href="{% url 'hotplist:new_review' HP_data.id %}"><button>리뷰 추가하기</button></a></p>
 {%endif%}
-<h2>리뷰</h2>
-{% for review in Review_data%}
+<h4>리뷰</h4>
+{% for review in Review_data.all%}
 <ul>
     <p> Author : {{review.author}}</p>
     <p> Content : {{review.content}}</p>
     <p> Rating : {{review.rating}}</p>
     <p> Date : {{review.date}}</p>
+    {% if request.user == review.author%}
+    <a href="{% url 'hotplist:edit_review' review.id%}"><button>수정</button></a>
+    <a href="{% url 'hotplist:delete_review' review.id%}"><button>삭제</button></a>
+    {% endif %}
 </ul>
 <br>
 {%endfor%}
