--- a/HotPlaceList/templates/hotplist/my_profile.html
+++ b/HotPlaceList/templates/hotplist/my_profile.html
@@ -1,24 +1,25 @@
 {% extends 'base.html' %}
 {% block content%}
 <h1>Hi! {{user.username}}</h1>
+<p><a href="{% url 'hotplist:index' %}">Home</a></p>
 <p>My WantList</p>
 <hr>
 {% for item in want_data%}
 <li style='list-style-type:decimal'>
 <p>{{item.hotplace.placename}}</p>
+<hr>
 </li>
 {% endfor %}
-<br>
+<br><br>
 <p>My Reviews</p>
 <hr>
 {% for data in review_data.all%}
-<li style='list-style-type:decimal'>
+<ol>
     <p>Place : {{data.place.placename}}</p>
     <p>Content : {{data.content}}</p>
     <p>Rating : {{data.rating}}</p>
     <p>Date : {{data.date}}</p>
     <hr>
-</li>
+</ol>
 {% endfor %}
-<p><a href="{% url 'hotplist:index' %}"><button>Home</button></a></p>
 {% endblock %}
